--- a/src/app/views/researcherlogin/researcherlogin.component.html
+++ b/src/app/views/researcherlogin/researcherlogin.component.html
@@ -1,10 +1,8 @@
 <div *ngIf="!showLoginForm && !showRegisterForm" style="margin-top: 120px;">
   <h1 fxLayout="row" fxLayoutAlign="center center">{{'researcher-login.user-type' | translate}}</h1>
   <div fxLayout="row" fxLayoutGap="1em" fxLayoutAlign="center center" style="margin-top: 80px;">
-    <button class="buttons" color="accent" mat-raised-button (click)="loginForm()">{{'landing-page.login' | translate}}</button>
-  </div>
-  <div fxLayout="row" fxLayoutGap="1em" fxLayoutAlign="center center" style="margin-top: 80px;">
-    <button class="buttons" color="accent" mat-raised-button (click)="register()">{{'landing-page.register' | translate}}</button>
+    <button id="login" color="accent" mat-raised-button (click)="loginForm()">{{'landing-page.login' | translate}}</button>
+    <button color="accent" mat-raised-button (click)="register()">{{'landing-page.register' | translate}}</button>
   </div>
 </div>
 
@@ -32,10 +30,10 @@
 </form>
 <mat-divider [inset]="true"></mat-divider>
 <mat-card-actions align="end">
-  <button class="buttons" color="accent" mat-raised-button (click)="login(username, password)"
+  <button id="Login2" color="accent" mat-raised-button (click)="login(username, password)"
     [disabled]="!loginValid()">{{'landing-page.login_2' | translate}}</button>
   &nbsp;
-  <button class="buttons" color="accent" mat-raised-button (click)="showLoginForm = false">{{'landing-page.close' | translate}}</button>
+  <button color="accent" mat-raised-button (click)="showLoginForm = false">{{'landing-page.close' | translate}}</button>
 </mat-card-actions>
 </mat-card>
 
