--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -6,7 +6,7 @@
     <button color="accent" mat-raised-button (click)="loginForm()">{{'landing-page.login' | translate}}</button>
     &nbsp;
     <button color="accent" mat-raised-button (click)="register()">{{'landing-page.register' | translate}}</button>
-    <button color="accent" mat-raised-button routerLink="/researcher-login">To researcher login</button>
+    <button id="researcher" color="accent" mat-raised-button routerLink="/researcher-login">To researcher login</button>
     <button color="accent" mat-raised-button routerLink="/test-page">To test page</button>
   </div>
 </div>
