added css to the landing package
added a lot of css and images, installed bootstrap and jquery. In TS files. Changed landing page.

--- a/src/app/views/footer/footer.component.html
+++ b/src/app/views/footer/footer.component.html
@@ -5,22 +5,22 @@
     <ul>
         <li>
             <a target="_blank" href="https://www.google.com">
-            <img src="https://img.icons8.com/material-outlined/24/000000/google-plus.png"></a>
+                <img src="../../../assets/images/google-plus.png"></a>
         </li>
         &nbsp;
         <li>
             <a target="_blank" href="https://www.facebook.com">
-            <img src="https://img.icons8.com/material-outlined/24/000000/facebook-circled.png" ></a>
+                <img src="../../../assets/images/facebook.png"></a>
         </li>
         &nbsp;
         <li>
             <a target="_blank" href="https://www.twitter.com">
-            <img src="https://img.icons8.com/material-outlined/24/000000/twitter.png"></a>
+                <img src="../../../assets/images/twitter.png"></a>
         </li>
         &nbsp;
         <li>
             <a target="_blank" href="https://www.linkedin.com">
-            <img src="https://img.icons8.com/material-outlined/24/000000/linkedin.png"></a>
+                <img src="../../../assets/images/linkedin.png"></a>
         </li>
     </ul>
 </mat-toolbar>
