set up participant page and login/register

--- a/src/app/views/participant/participant.component.css
+++ b/src/app/views/participant/participant.component.css
@@ -6,8 +6,8 @@
   padding-top: 10px;
   padding-bottom: 10px;
 
-  color: white;
-  background-color: dodgerblue;
+  color: orange;
+  background-color: darkgreen;
 }
 
 mat-form-field {
