--- a/src/app/views/login/login.component.css
+++ b/src/app/views/login/login.component.css
@@ -8,10 +8,15 @@ mat-form-field-2 {
 
 mat-card {
     margin-bottom: 1em;
-    border: 1px red solid;
-    border-radius: 20px;
+    border: 5px rgb(53, 53, 53) solid;
+    border-radius: 1px;
     width: 50%;
+    background: rgb(255, 255, 255);
     margin: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+    vertical-align: middle;
+    background-size: cover;
 }
 
 .register-form {
@@ -42,3 +47,18 @@ mat-hint {
     width: 300px;
     margin-bottom: 15px;
 }
+
+/*
+input {
+    width: 100%;
+    height: 48px;
+    color: hsl(0, 0, 20);
+    padding: 15px 40px 15px 15px;
+    border-radius: 5px;
+    font-size: 14px;
+    outline: none !important;
+    border: 1px solid hsla(0, 0, 0, 0.3);
+    box-shadow: inset 0 1px 4px hsla(0, 0, 0, 0.2);
+    vertical-align: top;
+}
+*/
