Reworked survey model

--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -8,8 +8,10 @@
         &nbsp;
         <button class="btn-gradient blue large" mat-raised-button
              routerLink="/participant-login">{{'landing-page.participant' | translate}}</button>
+
+        <button mat-raised-button routerLink="/survey-maker">Go to Survey-Maker</button>
+      </div>
     </div>
-</div>
 <!-- old landing page
 <div *ngIf="!showLoginForm && !showRegisterForm && !showHome" style="margin-top: 120px;">
     <h1 fxLayout="row" fxLayoutAlign="center center">{{'landing-page.welcome' | translate}}</h1>
