--- a/src/app/views/surveys/survey-maker/survey-maker.component.html
+++ b/src/app/views/surveys/survey-maker/survey-maker.component.html
@@ -8,12 +8,12 @@
       <!-- This part of the form handles general information about the survey -->
       <mat-form-field>
         <mat-label>Survey Title</mat-label>
-        <input matInput id="surveyTitle" type="text" name="title" [(ngModel)]="json.title">
+        <input matInput id="surveyTitle" type="text" name="title">
       </mat-form-field>
       <br/>
       <mat-form-field>
         <mat-label>Show Navigation Bar</mat-label>
-            <mat-select [(ngModel)]="json.showProgressBar">
+            <mat-select [(ngModel)]="model.showProgressBar">
               <mat-option *ngFor="let option of navigationBarPositions" [value]="option">
                 {{option}}
               </mat-option>
@@ -23,12 +23,12 @@
       <mat-divider></mat-divider>
       <br/>
       <!-- This part of the form handles the individual questions/elements of the survey -->
-      <span *ngFor="let page of json.pages;">
-        <span *ngFor="let element of page.elements; index as j;">
+      <span *ngFor="let page of model.pages;">
+        <span *ngFor="let element of elements; index as j;">
           <!-- The question title is what is displayed as the question, and replaces the question's name if it is defined -->
           <mat-form-field>
             <mat-label>Question {{j + 1}} Title</mat-label>
-            <input matInput id="questionTitle{{j}}" type="text" name="question-title" [(ngModel)]="element.title">
+            <input matInput id="questionTitle{{j}}" type="text" name="question-title">
           </mat-form-field>
           <br/>
           <br/>
@@ -62,6 +62,6 @@
     &nbsp;
   <!-- This grid-tile displays a preview of the survey -->
     <mat-card fxFlex="45%">
-      <survey-view [(model)]="json"></survey-view>
+      <survey-view [(template)]="model"></survey-view>
     </mat-card>
   </div>
